# lichen-installer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
backend/: Cargo.toml  build.rs
backend/src/: auth.rs  backend_service.rs  builtin_strategies.rs  disk_service.rs  lib.rs  locales_service.rs  main.rs  provisioner_service.rs  system_service.rs
cli/: Cargo.toml
cli/src/: frontend.rs  installer.rs  lib.rs  logging.rs  main.rs  strategies.rs
cli/src/frontend/: disks.rs  locale.rs  storage.rs  summary.rs
cli/src/model/: region.rs
crates/installer/: Cargo.toml
crates/installer/src/: icon.rs  lib.rs  step.rs
crates/lichen-macros/: Cargo.toml
crates/lichen-macros/src/: lib.rs
crates/protocols/: Cargo.toml  build.rs  disks.proto  locales.proto  osinfo.proto  system.proto
crates/protocols/src/: backend_utils.rs  lib.rs  privileged.rs
crates/protocols/src/backend_utils/: disks.rs  locales.rs  osinfo.rs
crates/protocols/storage/: disks.proto  provisioner.proto  strategy.proto  types.proto
data/selections/: README.md  base.json  cosmic.json  gnome.json
installer/: Cargo.toml
installer/src/: icon.rs  lib.rs  model.rs  step.rs
installer/src/model/: disk.rs
lichen_cli/: Cargo.toml
protocols/: Cargo.toml  backend.proto  build.rs  disks.proto
protocols/src/: backend_utils.rs  lib.rs  privileged.rs
strategies/: use_whole_disk.kdl
