[workspace]
members = [
    "backend",
    "installer",
    "cli",
]
default-members = [
    "backend",
    "installer",
    "cli"
]
resolver = "2"

[workspace.dependencies]
cliclack = { git = "https://github.com/ikeycode/cliclack.git", version = "0.3.5" }
color-eyre = "0.6.3"
console = "0.15.11"
disks = { git = "https://github.com/AerynOS/disks-rs.git", version = "0.1.0" }
inventory = "0.3.20"
provisioning = { git = "https://github.com/AerynOS/disks-rs.git", version = "0.1.0" }
miette = "7.5.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
tonic = "0.12.3"
tonic-build = "0.12.3"


[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
semicolon_in_expressions_from_macros = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
