[workspace]
members = [
    "backend",
    "cli",
    "crates/*"
]
default-members = [
    "backend",
    "cli"
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.88"
cliclack = { git = "https://github.com/ikeycode/cliclack.git", version = "0.3.5" }
color-eyre = "0.6.3"
console = "0.15.11"
disks = { git = "https://github.com/AerynOS/disks-rs.git", version = "0.1.0" }
inventory = "0.3.20"
prost = "0.13.5"
provisioning = { git = "https://github.com/AerynOS/disks-rs.git", version = "0.1.0" }
miette = "7.5.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
tokio = "1.44.1"
tokio-stream = "0.1.17"
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.5.2"
hyper-util = "0.1.10"
thiserror = "2.0.12"
os-info = { git = "https://github.com/AerynOS/os-info.git", version = "0.1.0" }
http = "1.3.1"
nix = "0.29.0"
command-fds = "0.3.0"
uuid = "1.16.0"


[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
semicolon_in_expressions_from_macros = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
