[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend for the Lichen installer"
repository = "https://github.com/AerynOS/lichen-installer"

[[bin]]
name = "lichen_backend"
path = "src/main.rs"

[dependencies]
disks.workspace = true
nix = { workspace = true, features = ["fs", "process", "signal"] }
protocols = { path = "../crates/protocols", features = ["backend-utils"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tonic = { workspace = true }
os-info.workspace = true

color-eyre = { workspace = true, features = ["issue-url"] }
console.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
