[package]
name = "cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AerynOS/lichen-installer"

[[bin]]
name = "lichen_cli"
path = "src/main.rs"

[build-dependencies]
installer = { path = "../installer" }

[dependencies]
protocols = { path = "../protocols" }
tonic = { workspace = true }

installer = { path = "../installer" }
cliclack.workspace = true
color-eyre = { workspace = true, features = ["issue-url"] }
console.workspace = true
disks.workspace = true
miette = { workspace = true, features = ["fancy"] }
provisioning.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
