[package]
name = "cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AerynOS/lichen-installer"

[[bin]]
name = "lichen_cli"
path = "src/main.rs"

[build-dependencies]
installer = { path = "../crates/installer" }

[dependencies]
protocols = { path = "../crates/protocols" }
tonic = { workspace = true }
installer = { path = "../crates/installer" }

cliclack.workspace = true
color-eyre = { workspace = true, features = ["issue-url"] }
console.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

[lints]
workspace = true
