[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
prost.workspace = true
tonic = { workspace = true }
tokio.workspace = true
tower.workspace = true
hyper-util = { workspace = true, features = ["full"]}
thiserror.workspace = true
http.workspace = true

[lints]
workspace = true
