[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
prost.workspace = true
tonic = { workspace = true }
tokio.workspace = true
tower.workspace = true
hyper-util = { workspace = true, features = ["full"]}
thiserror.workspace = true
http.workspace = true
nix = { workspace = true, features = ["fs", "process"] }
command-fds = { workspace = true, features = ["tokio"] }
uuid = { workspace = true, features = ["v4"] }
tracing.workspace = true

[lints]
workspace = true
