[package]
name = "installer"
description = "Frontend scaffolding for the Lichen installer"
version = "0.1.0"
edition = "2021"

[dependencies]
protocols = { path = "../protocols" }
tracing.workspace = true
inventory.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true

[lints]
workspace = true
