[package]
name = "lichen-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the Lichen installer"
repository = "https://github.com/AerynOS/lichen-installer"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lints]
workspace = true
