[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
prost.workspace = true
tonic = { workspace = true }
tokio.workspace = true
tower.workspace = true
hyper-util = { workspace = true, features = ["full"]}
thiserror.workspace = true
http.workspace = true
uuid = { workspace = true, features = ["v4"] }
tracing.workspace = true

disks = { workspace = true, optional = true }
os-info = { workspace = true, optional = true }
locales-rs = { workspace = true, optional = true }

[features]
backend-utils = ["dep:disks", "dep:os-info", "dep:locales-rs"]

[lints]
workspace = true
